--- a/app/src/main/res/layout/activity_full_image.xml
+++ b/app/src/main/res/layout/activity_full_image.xml
@@ -5,10 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="proj.example.evaluationtask.MainActivity">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    tools:context="proj.example.evaluationtask.FullImageActivity">
+    <ImageView
+        android:id="@+id/fullImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
